syntax = "proto3";

option java_package = "com.naveen.jetpackdatastore.proto";
option java_multiple_files = true;

message UserSettings {
  string user_name = 1;
  int32 user_age = 2;
  bool is_premium_user = 3;
  string email_address = 4;
  repeated string favorite_topics = 5;
  UserTheme theme = 6;
  NotificationSettings notifications = 7;
}

message UserTheme {
  string primary_color = 1;
  bool is_dark_mode = 2;
  string font_size = 3;
}

message NotificationSettings {
  bool email_notifications = 1;
  bool push_notifications = 2;
  bool sms_notifications = 3;
  int32 notification_frequency = 4;
}
